# JeefCraft

./: CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE-ASSETS.md  README.md
Assets/: _.txt  basic.vert
Shaders/: basic.frag  basic.vert  red.vert
src/base/: io.c  io.h  types.h
src/game/: camera.c  camera.h  world.c  world.h
src/graphics/: shader.c  shader.h  texture2d.c  texture2d.h
src/main/: main.c
src/math/: aabb.c  aabb.h  frustum.c  frustum.h  math.h  math_impl.c  matrix.c  matrix.h  ray.c  ray.h  screenWorld.c  screenWorld.h
src/platform/: input.h  platform.h  window.h
src/platform/glfw3/: glfw3Input.c  glfw3Input.h  glfw3Platform.c  glfw3Window.c
src/world/: cube.h  material.h  terrainGen.c  terrainGen.h  util.c  util.h  world.c  world.h
